--- a/vector/vector.vcxproj
+++ b/vector/vector.vcxproj
@@ -141,11 +141,13 @@
   <ItemGroup>
     <ClInclude Include="MyMatrix.h" />
     <ClInclude Include="MyVector.h" />
+    <ClInclude Include="VirtualExample.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MyMatrix.cpp" />
     <ClCompile Include="MyVector.cpp" />
+    <ClCompile Include="VirtualExample.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
